<resources>
    <string name="app_name">HotSpot</string>
    <string name="content_desc_logosatekstom">LogoSaTekstom</string>
    <string name="content_desc_loginPozadina">LoginPozadina</string>
    <string name="input_login_Email_text">Email or username</string>
    <string name="input_Register_Email_text">Email</string>
    <string name="input_login_Username_text">Username</string>
    <string name="input_login_password_text">Password</string>
    <string name="input_Register_ConfirmPassword_text">Confirm password</string>
    <string name="button_login_text">Log In</string>
    <string name="button_SignUp_text">Sign Up</string>
    <string name="Loading_dialog_text">Loading...</string>
    <string name="Forgotten_Password_title">Password recovery</string>
    <string name="Recover_button">Recover</string>
    <string name="VericiationCodeTitle">Enter the code</string>
    <string name="VerificationCode">Verification code</string>
    <string name="SendVerificationCodeButton">SEND</string>
    <string name="newpassword">New password</string>
    <string name="NewPasswordTitle">Enter new password</string>
    <string name="confirmButton">Confirm</string>
    <string name="CheckEmailAdress">Check your email adress to verify changes</string>
    <string name="NewUserTokenCreated">New user token created</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="logOut">Logout</string>
    <string name="EditProfileImage">Change profile photo</string>
    <string name="ChangeDataProfile">CHANGE</string>
    <string name="Camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="oldPassword">Old password</string>
    <string name="newPassword">New password</string>
    <string name="addImage">Add image</string>
    <string name="addLocation">Add location</string>
    <string name="Unfollow">Unfollow</string>
    <string name="Comments">Comments</string>
    <string name="CreatePost">Publish</string>
    <string name="LongPostDescription">Long post description</string>
    <string name="ShortPostDescription">Short post description</string>
    <string name="SuccesCreatingPost">Successfully created post</string>
    <string name="FailedCreatingPost">Failed creating post</string>
    <string name="InsertYourComment">Insert your comment</string>
    <string name="ViewComments">View comments</string>
    <string name="NoCommentsYet">No Commets Yet</string>
    <string name="Confirm">Confirm</string>


    <string-array name="CommentDropdownSort">
        <item>Date up</item>
        <item>Date down</item>
    </string-array>

    //InputErrors
    <string name="forgotPasswordText">Forgot password?</string>
    <string name="InsertYourEmailOrUsername">Insert your email or username</string>
    <string name="InsertYourPassword">Insert your password</string>
    <string name="InsertYourUsername">Insert your username</string>
    <string name="InsertYourEmail">Insert your Email</string>
    <string name="PasswordsAreNotTheSame">Confirm your password</string>
    <string name="InsertYourVerificationCode">Insert your verification code</string>
    <string name="InsertYourNewPassword">Insert your new password</string>
    <string name="ConfirmPasswordError">New password and confirm password are not the same</string>
    <string name="UserNameShortLength">Username must contain at least four characters</string>
    <string name="UserNameLongLength">Username can not contain more than twenty characters</string>
    <string name="ErrorEmailForm">Invalid email</string>
    <string name="ShortPasswordLength">Password must contain at least five characters</string>
    <string name="PasswordLongLegth">Password can not contain more than twenty characters</string>
    <string name="TokenEmpty">Verificaion token is required</string>
    <string name="OldPasswordEmpty">Insert your old password</string>
    <string name="confirmnewPasword">Confirm new password</string>

    //errorsFromAPI
    <string name="ConnectionError">There is a problem with connection, try again later</string>
    <string name="WrongUsernameOrPasswordError">Wrong username or password</string>
    <string name="EmailIsAlreadyTaken">Email is already taken</string>
    <string name="UsernameIsAlreadyTaken">Username is already taken</string>
    <string name="ErrorWithSendingEmail">Error with sending email</string>
    <string name="EmailNotVerified">Account not verified, please check you email</string>
    <string name="InvalidToken">Token is not valid</string>
    <string name="ExpiredToken">Token has expired</string>
    <string name="ErrorWhileCreatingNewToken">Error while creating new token</string>
    <string name="EmailAlreadyVerified">Account is already verified</string>
    <string name="wrongPassword">Wrong password</string>
    <string name="ErrorWhileAddingComment">Error while adding comment</string>
    <string name="ErrorWhileGettingPosts">Error while getting posts</string>
    //success
    <string name="SuccessfulLogin">Successful login</string>
    <string name="SuccessfulRegistration">Successful registration</string>
    <string name="UnsuccessfulRegistration">Unsuccessful registration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SuccessfulEmailValidation">Successful email validation</string>
    <string name="successfullChangeAccountData">Successfull account data change</string>
    <string name="sort_by">Sort by</string>
    <string name="new_comment">New comment</string>
    <string name="comment">Comment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps_api_key">AIzaSyCyhc2jb7rBAx6csjd6yn26hKSKr4wSQr8</string>
    <string name="none">None</string>
    <string name="normal_map">Normal map</string>
    <string name="satellite_map">Satellite map</string>
    <string name="maphybrid_map">MapHybrid map</string>
    <string name="terrain_map">Terrain map</string>
    <string name="following">Following</string>
    <string name="my_posts">My posts</string>
    <string name="my_posts_on_map">My posts on map</string>
    <string name="google_maps">Google maps</string>
    <string name="insert_location">Insert location</string>
    <string name="posts_on_map">Posts on map</string>
    <string name="explore_the_world">Explore the world</string>
    <string name="show_post">Show post</string>
    <string name="you_currently_follow_nobody">You currently follow nobody</string>


</resources>