<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#00FFFFFF"
    >

    <!--android:background="#30ffffff"-->

    <LinearLayout
        android:id="@+id/logInLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_pink"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/input_login_Email_text"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_pink"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/input_login_password_text"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="20sp"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/forgotPasswordText"
            android:textAlignment="textEnd"
            android:textColor="#616161"
            android:textSize="13sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/dugme_pozadina"
            android:text="@string/button_login_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>