<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.Profile.EditProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/EditProfileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/profileImage1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/default_profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        android:gravity="center"/>

        <TextView
            android:id="@+id/EditProfileImage"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:text="@string/EditProfileImage"
            android:textAlignment="center"
            android:textColor="@color/pink1"
            android:textSize="21sp"
            android:textStyle="bold|normal"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:hintTextAppearance="@style/HintText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:ems="10"
                android:hint="@string/input_login_Username_text"
                android:inputType="text"
                style="@style/InputPolje"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/HintText"
            app:errorTextAppearance="@style/ErrorText"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/input_login_Email_text"
                android:inputType="text"
                style="@style/InputPolje"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/changeDugme"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/dugme_pozadina"
            android:text="@string/ChangeDataProfile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

</FrameLayout>