<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    app:cardElevation="3dp"
    android:background="@drawable/edit_text_pink"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/dugme_pozadina">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addImage"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:padding="10dp"
                android:layout_marginStart="50dp"/>
            <ImageView
                android:id="@+id/btnCloseDialog"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="1dp"
                android:src="@drawable/closebutton"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            >

            <Button
                android:id="@+id/galleryButton"
                android:background="@drawable/dugme_pozadina"
                android:padding="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/galleryicon"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Gallery"
                android:layout_marginRight="5dp"

                />
            <Button
                android:id="@+id/cameraButton"
                android:background="@drawable/dugme_pozadina"
                android:padding="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_camera_alt_24"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Camera"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>