<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgottenPasswordActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/content_desc_loginPozadina"
        android:scaleType="centerCrop"
        android:src="@drawable/login_pozadina"
        app:shapeAppearanceOverlay="@style/Zaobljeni_uglovi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="327dp"
        android:layout_height="89dp"
        android:contentDescription="@string/content_desc_logosatekstom"
        app:layout_constraintBottom_toBottomOf="@id/imageView3"
        app:layout_constraintEnd_toEndOf="@id/imageView3"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="@id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.345"
        app:srcCompat="@drawable/hotspotapp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:orientation="vertical"
            android:id="@+id/linearlayout1"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"

                android:gravity="center"
                android:orientation="horizontal"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">


                <TextView
                    android:id="@+id/logIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/Forgotten_Password_title"
                    android:textAlignment="center"
                    android:textColor="@color/pink1"
                    android:textSize="28sp"
                    android:textStyle="bold|normal"
                    />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/FogottenPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="25dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EmailRecover"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_pink"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="5dp"
                        android:ems="10"
                        android:hint="@string/input_login_Email_text"
                        android:padding="10dp"
                        android:textColor="#000000"
                        android:textColorHint="#000000"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>





                <Button
                    android:id="@+id/recoverButton"
                    android:layout_width="209dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/dugme_pozadina"
                    android:text="@string/Recover_button"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>