<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"

            android:gravity="center"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">


            <TextView
                android:id="@+id/logIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp"
                android:text="@string/Forgotten_Password_title"
                android:textAlignment="center"
                android:textColor="@color/pink1"
                android:textSize="28sp"
                android:textStyle="bold|normal" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/FogottenPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingBottom="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EmailRecover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_pink"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/input_login_Email_text"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPasswordWrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_pink"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/newpassword"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textSize="20sp"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ConfirmNewPasswordWrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ConfirmNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_pink"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/input_Register_ConfirmPassword_text"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    android:textSize="20sp"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/recoverButton"
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/dugme_pozadina"
                android:text="@string/Recover_button"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>